--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Flexiata - Home page</title>
 
     <link rel="stylesheet" href="./assets/css/main.css" />
+    <!-- bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
   </head>
   <body>
     <!-- nav bar -->
@@ -112,7 +114,7 @@
     </section>
 
     <!-- client section -->
-    <section id="client">
+    <section id="clients">
       <div class="container-xl row m-auto py-5">
         <div class="col-md col-sm-4 text-center py-3 p-md-0"><img src="./assets/img/company/slack.png" alt="slack"></div>
         <div class="col-md col-sm-4 text-center py-3 p-md-0"><img src="./assets/img/company/amazon.png" alt="amazon"></div>
@@ -211,17 +213,209 @@
 
     <!-- why choose use section -->
     <section>
-      <div class="container-xl">
-        <div class="text-center">
-          <h1>Why You Choose Us</h1>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus nam animi voluptatibus, hic obcaecati et quis veritatis, alias minus in, nobis quaerat beatae architecto non sequi provident molestias excepturi totam.</p>
+      <div class="container-xl choose-csoz">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 col text-center">
+            <h1 class="fw-bold text-altlight">Why You Choose Us</h1>
+            <p >Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus nam animi voluptatibus, hic obcaecati et quis veritatis, alias minus in, nobis quaerat beatae architecto non sequi provident molestias excepturi totam.</p>
+          </div>
+        </div>
+       
+          <div class="nav nav-pills nav-fill gap-3 mt-5" id="nav-tab" role="tablist">
+            <button
+              class="whybut-csoz nav-link"
+              id="nav-home-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#nav-home"
+              type="button"
+              role="tab"
+              aria-controls="nav-home"
+              aria-selected="false"
+            >
+            Latest Technology
+            </button>
+  
+            <button
+              class="whybut-csoz nav-link active"
+              id="nav-profile-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#nav-profile"
+              type="button"
+              role="tab"
+              aria-controls="nav-profile"
+              aria-selected="true"
+            >
+            Save Time & Effort
+
+            </button>
+  
+            <button
+              class="whybut-csoz nav-link"
+              id="nav-contact-tab"
+              data-bs-toggle="tab"
+              data-bs-target="#nav-contact"
+              type="button"
+              role="tab"
+              aria-controls="nav-contact"
+              aria-selected="false"
+            >
+            Work with a Aim
+            </button>
+          </div>
+        <div class="tab-content mt-5" id="nav-tabContent">
+          <div
+            class="tab-pane fade  p-3"
+            id="nav-home"
+            role="tabpanel"
+            aria-labelledby="nav-home-tab"
+          >
+            <div class="row">
+              <div class="col-4 d-none d-md-block">
+                <img src="./assets/img/chooseUs/03.png" class="img-fluid" alt="latest_technology">
+
+              </div>
+              <div class="col-12 col-md-8">
+                <div class="row row-cols-1 row-cols-sm-2 g-4">
+                  <div class="col">
+                    <div class="d-flex align-items-center mb-3">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/angular.png" alt="angular">
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="d-flex align-items-center mb-3">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/react.png" alt="react">
+                    </div>
+                  </div><div class="col">
+                    <div class="d-flex align-items-center mb-3">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/laravel.png" alt="laravel">
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="d-flex align-items-center mb-3">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/flutter.png" alt="flutter">
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="d-flex align-items-center mb-3">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/azure.png" alt="azure">
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="d-flex align-items-center mb-3">
+                      <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <img class="ms-3 img-fluid" src="./assets/img/chooseUs/aws.png" alt="aws">
+                    </div>
+                  </div>
+                </div>
+                <button class="btn btn-serdark mt-4 px-4 btn-csoz">Read More <i class="bi bi-chevron-compact-right"></i></button>
+              </div>
+            </div>
+          </div>
+  
+          <div
+            class="tab-pane fade active show p-3"
+            id="nav-profile"
+            role="tabpanel"
+            aria-labelledby="nav-profile-tab"
+          >
+          <div class="row">
+            <div class="col-4 d-none d-md-block">
+              <img src="./assets/img/chooseUs/01.png" class="img-fluid" alt="save_time_n_effort">
+            </div>
+            <div class="col-12 col-md-8">
+              <div class="row row-cols-1 row-cols-sm-2 g-4">
+                <div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Experienced Staff</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div>
+                <div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Fast Delivery</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div><div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div><div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div><div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Innovative solutions</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div>
+              </div>
+              <button class="btn btn-serdark mt-4 px-4 btn-csoz">Read More <i class="bi bi-chevron-compact-right"></i></button>
+            </div>
+          </div>
+          </div>
+          <div
+            class="tab-pane fade p-3"
+            id="nav-contact"
+            role="tabpanel"
+            aria-labelledby="nav-contact-tab"
+          >
+          <div class="row">
+            <div class="col-4 d-none d-md-block">
+              <img src="./assets/img/chooseUs/02.png" class="img-fluid" alt="work_with_aim">
+            </div>
+            <div class="col-12 col-md-8">
+              <div class="row row-cols-1 row-cols-sm-2 g-4">
+                <div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Experienced Staff</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div>
+                <div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Fast Delivery</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div><div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div><div class="col">
+                  <div class="d-flex align-items-center mb-3">
+                    <img src="./assets/img/chooseUs/tick.svg" alt="tick">
+                      <h5 class="fw-bold text-altlight m-0 ms-3">Competitive Pricing</h5>
+                  </div>
+                  <p>We at Flexiata will guarantee that the clients will always get more than the money they spend</p>
+                </div>
+              </div>
+              <button class="btn btn-serdark mt-4 px-4 btn-csoz">Read More <i class="bi bi-chevron-compact-right"></i></button>
+            </div>
+          </div>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- counter section -->
-    <section class="bg-darkblue m-auto">
-      <div class="container-xl py-4">
+    <section class="bg-darkblue m-auto overflow-hidden  position-relative">
+      <div class="container-xl py-5">
         <div class="row text-secondary">
           <div class="col-sm-3 text-center py-3 p-sm-0 fw-bold">
             <h3 class="fw-bold fs-2">197</h3>
@@ -240,6 +434,10 @@
             <h5 class="fw-normal fs-6">Recognition</h5>
           </div>
         </div>
+
+      </div>
+      <div class="position-absolute counterimg-csoz d-none d-sm-block">
+        <img src="./assets/img/counter/FLEXIATA.png" class="img-fluid" alt="flexiata">
       </div>
     </section>
 
