added our work section

--- a/index.html
+++ b/index.html
@@ -441,6 +441,45 @@
       </div>
     </section>
 
+    <!-- our works section -->
+    <section class="bg-secondary overflow-hidden">
+      <div class="worksec-csoz container-xl">
+        <div class="werow-csoz serrow-csoz d-flex">
+          <h5 class="fw-bold fs-6 text-uppercase">Our &nbsp;</h5>
+          <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
+            Works
+          </h5>
+        </div>
+        <div class="w-75 content">
+          <h1 class="fw-bold text-altlight">Our Works Will Speaks It selves</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
+        </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-5 mt-5">
+          <div class="col col-sm-6 col-md-4 text-center rounded">
+            <img src="./assets/img/works/Rectangle 489.png" class="imgorwo-csoz" alt="">
+          </div>
+          <div class="col col-sm-6 col-md-4 text-center rounded">
+            <img src="./assets/img/works/Rectangle 490.png" class="imgorwo-csoz" alt="">
+          </div>
+          <div class="col col-sm-6 col-md-4 text-center rounded">
+            <img src="./assets/img/works/Rectangle 491.png" class="imgorwo-csoz" alt="">
+          </div>
+          <div class="col col-sm-6 col-md-4 text-center rounded">
+            <img src="./assets/img/works/Rectangle 492.png" class="imgorwo-csoz" alt="">
+          </div>
+          <div class="col col-sm-6 col-md-4 text-center rounded">
+            <img src="./assets/img/works/Rectangle 493.png" class="imgorwo-csoz" alt="">
+          </div>
+          <div class="col col-sm-6 col-md-4 text-center rounded">
+            <img src="./assets/img/works/Rectangle 494.png" class="imgorwo-csoz" alt="">
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+          <button class="btn redbut-csoz px-4 text-light">Read More</button>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
