--- a/index.html
+++ b/index.html
@@ -480,6 +480,101 @@
       </div>
     </section>
 
+    <!-- footer -->
+    <footer class="footer-csoz bg-darkblue text-lg-start pt-5">
+      <div class=" footertop-csoz container-fluid text-center text-sm-start">
+        <div class="container-xl  py-4">
+          <div class="row g-3 justify-content-between">
+            <div class="col-12 col-sm-6 col-md-2 p-2 p-md-1">
+              <div class="mb-4">
+                <img src="./assets/img/footer/Final-logo-NEW-01 (1) 2.png" class="img-fluid" alt="footer flexiata">
+              </div>
+              <p class="text-light lh-sm">Summit7Agency is Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibu eget iaculis purus</p>
+              <div class="row mt-4">
+                <div class="col px-0 py-1">
+                  <a href="#" class="d-inline-block">
+                    <div class="bg-light cir-csoz">
+                      <i class="bi bi-facebook"></i>
+                    </div>
+                  </a>
+                </div>
+                <div class="col px-0 py-1">
+                  <a href="#" class="d-inline-block">
+                    <div class="bg-light cir-csoz">
+                      <i class="bi bi-twitter"></i>
+                    </div>
+                  </a>
+                </div>
+                <div class="col px-0 py-1">
+                  <a href="#" class="d-inline-block">
+                    <div class="bg-light cir-csoz">
+                      <i class="bi bi-instagram"></i>
+                    </div>
+                  </a>
+                </div>
+                <div class="col px-0 py-1">
+                  <a href="#" class="d-inline-block">
+                    <div class="bg-light cir-csoz">
+                      <i class="bi bi-linkedin"></i>
+                    </div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
+              <div class="mb-4">
+                <h5 class="text-light fw-bold">Quick Links</h5>
+              </div>
+              <ul class="p-0 list-unstyled">
+                <li class="p-2"><a href="#" class="text-decoration-none text-light">Home</a></li>
+                <li class="p-2"><a href="#" class="text-decoration-none text-light">Services</a></li>
+                <li class="p-2"><a href="#" class="text-decoration-none text-light">Portfolio</a></li>
+                <li class="p-2"><a href="#" class="text-decoration-none text-light">About</a></li>
+                <li class="p-2"><a href="#" class="text-decoration-none text-light">Contact Us</a></li>
+              </ul>
+            </div>
+            <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
+              <div class="mb-4">
+                <h5 class="text-light fw-bold">Services</h5>
+              </div>
+              <ul class="p-0 list-unstyled">
+                <li class="text-light p-2">Development and Consultancy</li>
+                <li class="text-light p-2">Cloud Migration</li>
+                <li class="text-light p-2">Ecommerce</li>
+                <li class="text-light p-2">Web Development</li>
+                <li class="text-light p-2">UI/UX Design</li>
+                <li class="text-light p-2">SEO Service</li>
+              </ul>
+            </div>
+            <div class="col-12 col-sm-6 col-md-auto p-2 p-md-1">
+              <div class="mb-4">
+                <h5 class="text-light fw-bold">Contact Info</h5>
+              </div>
+              <div class="d-flex text-light justify-content-center justify-content-sm-start">
+                <i class="bi bi-geo-alt me-3"></i>
+                <p>33 Tullimbar Circuit
+                  <br/>Vermont South VIC 3133</p>
+              </div>
+              <div class="d-flex text-light justify-content-center justify-content-sm-start">
+                <i class="bi bi-telephone me-3"></i>
+                <p>(+61) 3 9119 3003</p>
+              </div>
+              <div class="d-flex text-light justify-content-center justify-content-sm-start">
+                <i class="bi bi-envelope me-3"></i>
+                <p>hello@flexiata.com</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid py-4">
+        <div class="container-xl text-center">
+          <p class="text-light m-0">Copyrights 2022 © Flexiata. All Rights Reserved. ABN: 91646783646</p>
+        </div>
+
+      </div>
+    </footer>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
