--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
     <section class="services-section bg-secondary overflow-hidden">
       <div class="serives-csoz container-xl ">
         <div class="werow-csoz serrow-csoz d-flex">
-          <h5 class="fw-bold fs-6 text-uppercase">Our &nbsp;</h5>
+          <h5 class="fw-bold fs-6 text-uppercase">OUR &nbsp;</h5>
           <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
-            Services
+            SERVICES
           </h5>
         </div>
         <div class="w-75 content">
@@ -500,8 +500,109 @@
     </section>
 
    <!-- testimonials  -->
-   <section>
+   <section class="position-relative">
+      <div class="container-xl carousel-csoz">
+        <div class="row d-none d-md-flex mb-4">
+          <div class="col-md-4"></div>
+          <div class="col-md-8">
+            <div class="werow-csoz serrow-csoz d-flex">
+              <h5 class="fw-bold fs-6 text-uppercase">OUR &nbsp;</h5>
+              <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
+                 TESTIMONIALS 
+              </h5>
+            </div>
+          </div>
+        </div>
+        <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false" data-bs-interval="false">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="row gap-3 gap-md-0">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                  <div class="img-container">
+                    <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="client-content-csoz">
+                    <h1 class="text-altlight fw-bold">“We have been supported by Flexiata”</h1>
+                    <p class="fs-6">We have been supported by Flexiata.  over several years now with our Facility booking web application. We have little expertise in managing a web application and Flexiata has always been available to help. They have made program modifications, installed our system on several different servers, developed add-on facilities to enhance our software’s scope, and given us many hours of advice and guidance. All in all we would thoroughly recommend Flexiata as managers, and developers of software</p>
+                    <div class="client-data-csoz">
+                      <h3 class="fw-bold text-altlight fs-5">Wendy Cutler</h3>
+                      <p class="fw-bold text-altlight">Customer</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row gap-3 gap-md-0">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                  <div class="img-container">
+                    <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="client-content-csoz">
+                    <h1 class="text-altlight fw-bold">“We have been supported by Flexiata”</h1>
+                    <p class="fs-6">We have been supported by Flexiata.  over several years now with our Facility booking web application. We have little expertise in managing a web application and Flexiata has always been available to help. They have made program modifications, installed our system on several different servers, developed add-on facilities to enhance our software’s scope, and given us many hours of advice and guidance. All in all we would thoroughly recommend Flexiata as managers, and developers of software</p>
+                    <div class="client-data-csoz">
+                      <h3 class="fw-bold text-altlight fs-5">Wendy Cutler</h3>
+                      <p class="fw-bold text-altlight">Customer</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="row gap-3 gap-md-0">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                  <div class="img-container">
+                    <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
+                  </div>
+                </div>
+                <div class="col-md-8">
+                  <div class="client-content-csoz">
+                    <h1 class="text-altlight fw-bold">“We have been supported by Flexiata”</h1>
+                    <p class="fs-6">We have been supported by Flexiata.  over several years now with our Facility booking web application. We have little expertise in managing a web application and Flexiata has always been available to help. They have made program modifications, installed our system on several different servers, developed add-on facilities to enhance our software’s scope, and given us many hours of advice and guidance. All in all we would thoroughly recommend Flexiata as managers, and developers of software</p>
+                    <div class="client-data-csoz">
+                      <h3 class="fw-bold text-altlight fs-5">Wendy Cutler</h3>
+                      <p class="fw-bold text-altlight">Customer</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row ju">
+            <div class="col-md-4"></div>
+            <div class="col-md-8">
+              <div class="d-flex align-items-center justify-content-center justify-content-md-start">
+                <button class="csbtn-csoz" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="prev">PREV
+                </button>
+                <div class="line"></div>
+                <button class="csbtn-csoz" type="button" data-bs-target="#carouselExampleControlsNoTouching" data-bs-slide="next">NEXT
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
+      <!-- background image -->
+      <div class="position-absolute bacg-csoz d-none d-md-block">
+        <img src="./assets/img/testimonials/Group 629.png" alt="box">
+      </div>
+   </section>
+
+   <!-- lets start section -->
+   <section>
+     <div class="container-fluid">
+       <div class="bg-primary">
+         <h1>Let’s start our <span>first step</span>to grow together </h1>
+         <p>Do you know what it takes to grow your business online? Do you want to?</p>
+         <a class="btn btn-outer" href="#">Contact Us</a>
+       </div>
+     </div>
    </section>
 
     <!-- footer -->
