--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         >
           <ul class="navbar-nav menu">
             <li class="nav-item px-4">
-              <a href="#" class="nav-link active text-dark fw-bold"> Home </a>
+              <a href="/" class="nav-link active text-dark fw-bold"> Home </a>
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">Services</a>
+              <a href="./services.html" class="nav-link text-dark fw-bold">Services</a>
             </li>
             <li class="nav-item px-4">
               <a href="#" class="nav-link text-dark fw-bold">Portfolio</a>
@@ -103,7 +103,7 @@
       </div>  
 
         <!-- scroll mouse section -->
-        <div class="scroll-csoz">
+        <div class="scroll-csoz d-none d-lg-block">
           <a href="#clients" class="text-decoration-none">
             <img src="./assets/img/mouse.png" alt="scroll mouse">
             <h5 class="fw-bold">Scroll</h5>
@@ -595,13 +595,29 @@
    </section>
 
    <!-- lets start section -->
-   <section>
+   <section class="bg-secondary pb-5">
      <div class="container-fluid">
-       <div class="bg-primary">
-         <h1>Let’s start our <span>first step</span>to grow together </h1>
-         <p>Do you know what it takes to grow your business online? Do you want to?</p>
-         <a class="btn btn-outer" href="#">Contact Us</a>
+       <div class="row">
+         <div class="col-2 d-none d-lg-flex justify-content-center align-items-center position-relative">
+          <div class="werow-csoz serrow-csoz d-flex rota-csoz">
+            <h5 class="fw-bold fs-6 text-uppercase">JUST &nbsp;</h5>
+            <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
+               ASK 
+            </h5>
+          </div>
+         </div>
+         <div class="col-8">
+          <div class="rounded p-5 text-center text-light letscs-csoz">
+            <h1>Let’s start our <span>first step</span> to grow together </h1>
+            <p>Do you know what it takes to grow your business online? Do you want to?</p>
+            <a class="btn btn-outline-light fs-6 px-4" href="#">Contact Us</a>
+          </div>
+         </div>
+         <div class="col-2">
+
+         </div>
        </div>
+       
      </div>
    </section>
 
