added some changes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <!-- hero section -->
-    <section class=" bg-secondary d-flex justify-content-center">
+    <section class=" bg-secondary d-flex justify-content-center overflow-hidden">
       <div
         class="hero-csoz container-xl  min-vh-100 justify-content-center position-relative"
       >
@@ -133,7 +133,7 @@
             SERVICES
           </h5>
         </div>
-        <div class="w-75 content">
+        <div class="w-75 content text-center text-sm-start">
           <h1 class="fw-bold text-altlight">We Provide IT Solutions</h1>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo earum nulla ab cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt. cupiditate nemo sed adipisci unde eos rerum velit. Vel sint nemo nam id et facere corrupti accusamus nesciunt.</p>
         </div>
@@ -522,7 +522,7 @@
                     <img src="./assets/img/testimonials/client1.png" class="img-fluid rounded-circle" alt="clients">
                   </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-8 bg-light">
                   <div class="client-content-csoz">
                     <h1 class="text-altlight fw-bold">“We have been supported by Flexiata”</h1>
                     <p class="fs-6">We have been supported by Flexiata.  over several years now with our Facility booking web application. We have little expertise in managing a web application and Flexiata has always been available to help. They have made program modifications, installed our system on several different servers, developed add-on facilities to enhance our software’s scope, and given us many hours of advice and guidance. All in all we would thoroughly recommend Flexiata as managers, and developers of software</p>
