--- a/services.html
+++ b/services.html
@@ -34,12 +34,14 @@
         </button>
         <!-- navbar links -->
         <div
-          class="collapse navbar-collapse justify-content-end align-center"
+          class="collapse navbar-collapse justify-content-end align-items-center"
           id="main-nav"
         >
           <ul class="navbar-nav menu">
             <li class="nav-item px-4">
-              <a href="/" class="nav-link text-dark fw-bold"> Home </a>
+              <a href="./index.html" class="nav-link text-dark fw-bold">
+                Home
+              </a>
             </li>
             <li class="nav-item px-4">
               <a
@@ -65,17 +67,15 @@
     <!-- hero section -->
     <section class="bg-secondary d-flex justify-content-center">
       <div
-        class="hero-csoz container-xl min-vh-100 justify-content-center position-relative d-flex flex-column justify-content-between pb-3 overflow-hidden"
+        class="hero-csoz container-xl justify-content-center position-relative d-flex flex-column justify-content-between pb-3 overflow-hidden"
       >
         <div
           class="herocol-csoz rehero-csoz d-flex flex-column justify-content-center align-items-md-start align-items-center text-center text-md-start pe-sm-0 position-relative"
           style="z-index: 2"
         >
           <div class="werow-csoz d-flex mb-5">
-            <h5 class="fw-bold fs-6 text-uppercase">Welcome &nbsp;</h5>
-            <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">
-              To Flexiata
-            </h5>
+            <h5 class="fw-bold fs-6 text-uppercase">OUR &nbsp;</h5>
+            <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">SERVICES</h5>
           </div>
           <h3 class="text-altlight fw-bold">Development and Consultancy</h3>
           <p class="lh-base w-75">
@@ -131,14 +131,14 @@
       </div>
     </section>
 
-    <section class="bg-altash">
+    <section class="bg-secondary">
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
-            class="col-md-5 py-2 py-md-5 d-flex justify-content-center align-center"
+            class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
             <div
-              class="imgcontainer-csoz d-flex justify-content-center align-center"
+              class="imgcontainer-csoz d-flex justify-content-center align-items-center"
             >
               <img
                 src="./assets/img/services_page/cloud.png"
@@ -149,7 +149,7 @@
             </div>
           </div>
           <div
-            class="col-md-7 py-2 py-md-5 d-flex justify-content-center align-center flex-column p-5"
+            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-center flex-column"
           >
             <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
               Cloud Migration
@@ -186,14 +186,14 @@
       </div>
     </section>
 
-    <section class="bg-secondary">
+    <section class="bg-light">
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
-            class="col-md-5 order-md-2 py-2 py-md-5 d-flex justify-content-center align-center"
+            class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
             <div
-              class="imgcontainer-csoz d-flex justify-content-center align-center"
+              class="imgcontainer-csoz d-flex justify-content-center align-items-center"
             >
               <img
                 src="./assets/img/services_page/servers.png"
@@ -204,7 +204,7 @@
             </div>
           </div>
           <div
-            class="col-md-7 order-md-1 py-2 py-md-5 d-flex justify-content-center align-center flex-column p-5"
+            class="col-md-7 order-md-1 py-3 pe-md-5 py-md-5 d-flex justify-content-center align-items-center flex-column"
           >
             <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
               Systems Infrastructure
@@ -235,14 +235,14 @@
       </div>
     </section>
 
-    <section class="bg-altash">
+    <section class="bg-secondary contafakebgrg-csoz">
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
-            class="col-md-5 py-2 py-md-5 d-flex justify-content-center align-center"
+            class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
             <div
-              class="imgcontainer-csoz d-flex justify-content-center align-center"
+              class="imgcontainer-csoz container-xl d-flex justify-content-center align-items-center"
             >
               <img
                 src="./assets/img/services_page/file.png"
@@ -253,7 +253,7 @@
             </div>
           </div>
           <div
-            class="col-md-7 py-2 py-md-5 d-flex justify-content-center align-center flex-column bg-condark p-5"
+            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-center flex-column bg-condark"
           >
             <h3 class="text-light fw-bold mb-5 text-center text-md-start">
               Web Development
@@ -290,14 +290,14 @@
       </div>
     </section>
 
-    <section class="bg-altash">
+    <section class="bg-secondary">
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
-            class="col-md-5 order-md-2 py-2 py-md-5 d-flex justify-content-center align-center"
+            class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
             <div
-              class="imgcontainer-csoz d-flex justify-content-center align-center"
+              class="imgcontainer-csoz d-flex justify-content-center align-items-center"
             >
               <img
                 src="./assets/img/services_page/ecommerce.png"
@@ -308,7 +308,7 @@
             </div>
           </div>
           <div
-            class="col-md-7 order-md-1 py-2 py-md-5 d-flex justify-content-center align-center flex-column p-5"
+            class="col-md-7 order-md-1 py-3 py-md-5 pe-md-5 d-flex justify-content-center align-items-center flex-column"
           >
             <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
               Ecommerce Web Applications
@@ -342,10 +342,10 @@
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
-            class="col-md-5 py-2 py-md-5 d-flex justify-content-center align-center"
+            class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
             <div
-              class="imgcontainer-csoz d-flex justify-content-center align-center"
+              class="imgcontainer-csoz d-flex justify-content-center align-items-center"
             >
               <img
                 src="./assets/img/services_page/uiux.png"
@@ -356,7 +356,7 @@
             </div>
           </div>
           <div
-            class="col-md-7 py-2 py-md-5 d-flex justify-content-center align-center flex-column p-5"
+            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-center flex-column"
           >
             <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
               UI/UX Design
@@ -389,14 +389,14 @@
       </div>
     </section>
 
-    <section class="bg-altash">
+    <section class="bg-secondary contafakebg-csoz">
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
-            class="col-md-5 order-md-2 py-2 py-md-5 d-flex justify-content-center align-center"
+            class="col-md-5 order-md-2 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
             <div
-              class="imgcontainer-csoz d-flex justify-content-center align-center"
+              class="imgcontainer-csoz d-flex justify-content-center align-items-center"
             >
               <img
                 src="./assets/img/services_page/cms.png"
@@ -407,7 +407,7 @@
             </div>
           </div>
           <div
-            class="col-md-7 order-md-1 py-2 py-md-5 d-flex justify-content-center align-center flex-column bg-condark p-5"
+            class="col-md-7 order-md-1 py-3 py-md-5 pe-md-5 d-flex justify-content-center align-items-center flex-column bg-condark"
           >
             <h3 class="text-light fw-bold mb-5 text-center text-md-start">
               Content Management Systems (CMS)
@@ -438,14 +438,14 @@
       </div>
     </section>
 
-    <section class="bg-altash position-relative">
+    <section class="bg-secondary position-relative">
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
-            class="col-md-5 py-2 py-md-5 d-flex justify-content-center align-center"
+            class="col-md-5 py-3 py-md-5 d-flex justify-content-center align-items-center"
           >
             <div
-              class="imgcontainer-csoz d-flex justify-content-center align-center"
+              class="imgcontainer-csoz d-flex justify-content-center align-items-center"
             >
               <img
                 src="./assets/img/services_page/seo.png"
@@ -456,7 +456,7 @@
             </div>
           </div>
           <div
-            class="col-md-7 py-2 py-md-5 d-flex justify-content-center align-center flex-column p-5"
+            class="col-md-7 py-3 py-md-5 ps-md-5 d-flex justify-content-center align-items-center flex-column"
           >
             <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
               SEO Service
@@ -502,10 +502,10 @@
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
-            class="col-md-5 order-md-2 py-2 py-md-5 d-flex justify-content-center align-center"
+            class="col-md-5 order-md-2 py-3 py-md-5 px-2 px-md-5 d-flex justify-content-center align-items-center"
           >
             <div
-              class="imgcontainer-csoz d-flex justify-content-center align-center"
+              class="imgcontainer-csoz d-flex justify-content-center align-items-center"
             >
               <img
                 src="./assets/img/services_page/webhosting.png"
@@ -516,7 +516,7 @@
             </div>
           </div>
           <div
-            class="col-md-7 order-md-1 py-2 py-md-5 d-flex justify-content-center align-center flex-column p-5"
+            class="col-md-7 order-md-1 py-3 py-md-5 pe-md-5 d-flex justify-content-center align-items-center flex-column"
           >
             <h3 class="text-altlight fw-bold mb-5 text-center text-md-start">
               Web Hosting Solutions
