added about page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         >
           <ul class="navbar-nav menu">
             <li class="nav-item px-4">
-              <a href="/" class="nav-link active text-dark fw-bold"> Home </a>
+              <a href="/index.html" class="nav-link active text-dark fw-bold"> Home </a>
             </li>
             <li class="nav-item px-4">
               <a href="./services.html" class="nav-link text-dark fw-bold">Services</a>
@@ -45,7 +45,7 @@
               <a href="#" class="nav-link text-dark fw-bold">Portfolio</a>
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">About Us</a>
+              <a href="./aboutus.html" class="nav-link text-dark fw-bold">About Us</a>
             </li>
             <li class="nav-item px-4">
               <a href="#" class="nav-link text-dark fw-bold">Contact Us</a>
