--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flexiata - Home page</title>
+    <title>Flexiata - Services page</title>
 
     <link rel="stylesheet" href="./assets/css/main.css" />
     <!-- bootstrap icons -->
@@ -54,7 +54,9 @@
               <a href="#" class="nav-link text-dark fw-bold">Portfolio</a>
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">About Us</a>
+              <a href="./aboutus.html" class="nav-link text-dark fw-bold"
+                >About Us</a
+              >
             </li>
             <li class="nav-item px-4">
               <a href="#" class="nav-link text-dark fw-bold">Contact Us</a>
