--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-light py-3">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-light py-3" id="navbar">
       <div class="container-xl">
         <a href="/index.html" class="navbar-barand text-decoration-none">
           <img src="./assets/img/logo.png" alt="fkexiata" />
@@ -721,5 +721,6 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/main.js"></script>
   </body>
 </html>
