Added some background images to services page sections

--- a/services.html
+++ b/services.html
@@ -191,7 +191,7 @@
       </div>
     </section>
 
-    <section class="bg-light">
+    <section class="bg-light position-relative">
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
@@ -237,6 +237,15 @@
             </p>
           </div>
         </div>
+      </div>
+
+      <!-- bottom right boxes -->
+      <div class="position-absolute bottom-0 end-0 bgimg-csoz">
+        <img
+          src="./assets/img/testimonials/Group 629.png"
+          class="img-fluid"
+          alt="boxes"
+        />
       </div>
     </section>
 
@@ -343,7 +352,16 @@
       </div>
     </section>
 
-    <section class="bg-light">
+    <section class="bg-light position-relative">
+      <!-- top right boxes -->
+      <div class="position-absolute bgtpimg-csoz">
+        <img
+          src="./assets/img/services_page/boxes2.png"
+          class="img-fluid"
+          alt="boxes"
+        />
+      </div>
+
       <div class="container-xl">
         <div class="row justify-content-center">
           <div
