--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <a href="./aboutus.html" class="nav-link text-dark fw-bold">About Us</a>
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">Contact Us</a>
+              <a href="./contactus.html" class="nav-link text-dark fw-bold">Contact Us</a>
             </li>
           </ul>
         </div>
