Added portfolio page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a href="./services.html" class="nav-link text-dark fw-bold">Services</a>
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">Portfolio</a>
+              <a href="./portfolio.html" class="nav-link text-dark fw-bold">Portfolio</a>
             </li>
             <li class="nav-item px-4">
               <a href="./aboutus.html" class="nav-link text-dark fw-bold">About Us</a>
