--- a/services.html
+++ b/services.html
@@ -566,6 +566,39 @@
       </div>
     </section>
 
+    <!-- lets start section -->
+    <section class="bg-secondary pb-5">
+      <div class="container-fluid">
+        <div class="row">
+          <div
+            class="col-lg-2 d-none d-lg-flex justify-content-center align-items-center position-relative"
+          >
+            <div class="werow-csoz serrow-csoz d-flex rota-csoz">
+              <h5 class="fw-bold fs-6 text-uppercase">JUST &nbsp;</h5>
+              <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">ASK</h5>
+            </div>
+          </div>
+          <div class="col-12 col-lg-8 pe-lg-0">
+            <div class="rounded p-5 text-center text-light letscs-csoz">
+              <h1>Let’s start our <span>first step</span> to grow together</h1>
+              <p>
+                Do you know what it takes to grow your business online? Do you
+                want to?
+              </p>
+              <a class="btn btn-outline-light fs-6 px-4" href="./contactus.html"
+                >Contact Us</a
+              >
+            </div>
+          </div>
+          <div
+            class="col-lg-2 d-none d-lg-block ps-0 overflow-hidden imgla-csoz"
+          >
+            <!-- background image has been set using css -->
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- footer -->
     <footer class="footer-csoz bg-darkblue text-lg-start pt-5">
       <div class="footertop-csoz container-fluid text-center text-sm-start">
