added counter animation

--- a/index.html
+++ b/index.html
@@ -430,23 +430,23 @@
     </section>
 
     <!-- counter section -->
-    <section class="bg-darkblue m-auto overflow-hidden  position-relative">
+    <section class="bg-darkblue m-auto overflow-hidden  position-relative" id="counter">
       <div class="container-xl py-5">
         <div class="row text-secondary">
           <div class="col-sm-3 text-center py-3 p-sm-0 fw-bold">
-            <h3 class="fw-bold fs-2">197</h3>
+            <h3 class="fw-bold fs-2 counter" data-target="197">0</h3>
             <h5  class="fw-normal fs-6">Project Finished</h5>
           </div>
           <div class="col-sm-3 text-center py-3 p-sm-0">
-            <h3 class="fw-bold fs-2">18+</h3>
+            <h3 class="fw-bold fs-2 counter plus" data-target="18">0</h3>
             <h5 class="fw-normal fs-6">Year Experience</h5>
           </div>
           <div class="col-sm-3 text-center py-3 p-sm-0">
-            <h3 class="fw-bold fs-2">230+</h3>
+            <h3 class="fw-bold fs-2 counter plus" data-target="230">0</h3>
             <h5 class="fw-normal fs-6">Happy Customers</h5>
           </div>
           <div class="col-sm-3 text-center py-3 p-sm-0">
-            <h3 class="fw-bold fs-2">1087</h3>
+            <h3 class="fw-bold fs-2 counter" data-target="1087">0</h3>
             <h5 class="fw-normal fs-6">Recognition</h5>
           </div>
         </div>
@@ -721,6 +721,7 @@
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script> 
+    <script src="./assets/js/counter.js"></script> <!--counter-->
   </body>
 </html>
