--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,9 @@
               >
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">Contact Us</a>
+              <a href="./contactus.html" class="nav-link text-dark fw-bold"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </div>
@@ -187,7 +189,7 @@
           >
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 489.png"
                     class="img-fluid w-100"
@@ -196,7 +198,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 490.png"
                     class="img-fluid w-100"
@@ -205,7 +207,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 491.png"
                     class="img-fluid w-100"
@@ -214,7 +216,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 492.png"
                     class="img-fluid w-100"
@@ -223,7 +225,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 493.png"
                     class="img-fluid w-100"
@@ -232,7 +234,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 494.png"
                     class="img-fluid w-100"
@@ -251,7 +253,7 @@
           >
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 489.png"
                     class="img-fluid w-100"
@@ -260,7 +262,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 490.png"
                     class="img-fluid w-100"
@@ -269,7 +271,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 491.png"
                     class="img-fluid w-100"
@@ -278,7 +280,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 492.png"
                     class="img-fluid w-100"
@@ -287,7 +289,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 493.png"
                     class="img-fluid w-100"
@@ -296,7 +298,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 494.png"
                     class="img-fluid w-100"
@@ -314,7 +316,7 @@
           >
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 489.png"
                     class="img-fluid w-100"
@@ -323,7 +325,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 490.png"
                     class="img-fluid w-100"
@@ -332,7 +334,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 491.png"
                     class="img-fluid w-100"
@@ -341,7 +343,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 492.png"
                     class="img-fluid w-100"
@@ -350,7 +352,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 493.png"
                     class="img-fluid w-100"
@@ -359,7 +361,7 @@
                 </a>
               </div>
               <div class="col col-sm-6 col-md-4 text-center rounded">
-                <a href="#">
+                <a href="./portfolio/webfeont.html">
                   <img
                     src="./assets/img/works/Rectangle 494.png"
                     class="img-fluid w-100"
