--- a/services.html
+++ b/services.html
@@ -54,7 +54,9 @@
               >
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">Portfolio</a>
+              <a href="./portfolio.html" class="nav-link text-dark fw-bold"
+                >Portfolio</a
+              >
             </li>
             <li class="nav-item px-4">
               <a href="./aboutus.html" class="nav-link text-dark fw-bold"
@@ -62,7 +64,9 @@
               >
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">Contact Us</a>
+              <a href="./contactus.html" class="nav-link text-dark fw-bold"
+                >Contact Us</a
+              >
             </li>
           </ul>
         </div>
