--- a/aboutus.html
+++ b/aboutus.html
@@ -49,7 +49,7 @@
               >
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">Portfolio</a>
+              <a href="./portfolio.html" class="nav-link text-dark fw-bold">Portfolio</a>
             </li>
             <li class="nav-item px-4">
               <a href="./aboutus.html" class="nav-link active text-dark fw-bold"
@@ -57,7 +57,7 @@
               >
             </li>
             <li class="nav-item px-4">
-              <a href="#" class="nav-link text-dark fw-bold">Contact Us</a>
+              <a href="./contactus.html" class="nav-link text-dark fw-bold">Contact Us</a>
             </li>
           </ul>
         </div>
