changed required styles

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             A Place <span>Where Your <br /></span>
             <span>IDEAS</span> <span class="sptext-csoz">GROW</span> 
           </h1>
-          <p class="lh-lg w-75">
+          <p class="lh-lg w-50">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam
@@ -434,19 +434,19 @@
       <div class="container-xl py-5">
         <div class="row text-secondary">
           <div class="col-sm-3 text-center py-3 p-sm-0 fw-bold">
-            <h3 class="fw-bold fs-2 counter" data-target="197">0</h3>
+            <h3 class="fw-bold fs-1 counter" data-target="197">0</h3>
             <h5  class="fw-normal fs-6">Project Finished</h5>
           </div>
           <div class="col-sm-3 text-center py-3 p-sm-0">
-            <h3 class="fw-bold fs-2 counter plus" data-target="18">0</h3>
+            <h3 class="fw-bold fs-1 counter plus" data-target="18">0</h3>
             <h5 class="fw-normal fs-6">Year Experience</h5>
           </div>
           <div class="col-sm-3 text-center py-3 p-sm-0">
-            <h3 class="fw-bold fs-2 counter plus" data-target="230">0</h3>
+            <h3 class="fw-bold fs-1 counter plus" data-target="230">0</h3>
             <h5 class="fw-normal fs-6">Happy Customers</h5>
           </div>
           <div class="col-sm-3 text-center py-3 p-sm-0">
-            <h3 class="fw-bold fs-2 counter" data-target="1087">0</h3>
+            <h3 class="fw-bold fs-1 counter" data-target="1087">0</h3>
             <h5 class="fw-normal fs-6">Recognition</h5>
           </div>
         </div>
@@ -609,7 +609,7 @@
          <div class="col-12 col-lg-8 pe-lg-0">
           <div class="rounded p-5 text-center text-light letscs-csoz">
             <h1>Let’s start our <span>first step</span> to grow together </h1>
-            <p>Do you know what it takes to grow your business online? Do you want to?</p>
+            <p>Do you know what it takes to grow your business online? <br/>Do you want to?</p>
             <a class="btn btn-outline-light fs-6 px-4" href="./contactus.html">Contact Us</a>
           </div>
          </div>
