--- a/services.html
+++ b/services.html
@@ -86,7 +86,9 @@
             <h5 class="fw-bold fs-6 text-uppercase">OUR &nbsp;</h5>
             <h5 class="coloured-csoz fw-bold fs-6 text-uppercase">SERVICES</h5>
           </div>
-          <h3 class="text-altlight fw-bold">Development and Consultancy</h3>
+          <h3 class="text-altlight fw-bold mb-4">
+            Development and Consultancy
+          </h3>
           <p class="lh-base w-75">
             The Flexiata team has solid expertise in application development,
             ranging from mobile, web, all the way up to full-fledged enterprise
@@ -97,7 +99,7 @@
         <!-- grid row -->
         <div class="row g-3 align-items-stretch">
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
-            <div class="bg-danger text-center p-4 rounded text-light h-100">
+            <div class="text-center p-4 rounded text-dark h-100 debox-csoz">
               <h5 class="mb-3 fw-bold">DevOps</h5>
               <p class="lh-base fw-normal">
                 For automation and integration of process between IT teams and
@@ -106,7 +108,7 @@
             </div>
           </div>
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
-            <div class="bg-danger text-center p-4 rounded text-light h-100">
+            <div class="text-center p-4 rounded text-dark h-100 debox-csoz">
               <h5 class="mb-3 fw-bold">Consultancy</h5>
               <p class="lh-base fw-normal">
                 We offer you expert opinions on every aspect when developing
@@ -115,7 +117,7 @@
             </div>
           </div>
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
-            <div class="bg-danger text-center p-4 rounded text-light h-100">
+            <div class="text-center p-4 rounded text-dark h-100 debox-csoz">
               <h5 class="mb-3 fw-bold">Development</h5>
               <p class="lh-base fw-normal">
                 Creating integrated development environments, source code, and
@@ -124,7 +126,7 @@
             </div>
           </div>
           <div class="col-sm-6 col-lg-3 d-flex align-items-stretch">
-            <div class="bg-danger text-center p-4 rounded text-light h-100">
+            <div class="text-center p-4 rounded text-dark h-100 debox-csoz">
               <h5 class="mb-3 fw-bold">Mobile Development</h5>
               <p class="lh-base fw-normal">
                 The Flexiata team develops world-class mobile applications
@@ -586,8 +588,8 @@
             <div class="rounded p-5 text-center text-light letscs-csoz">
               <h1>Let’s start our <span>first step</span> to grow together</h1>
               <p>
-                Do you know what it takes to grow your business online? Do you
-                want to?
+                Do you know what it takes to grow your business online? <br />Do
+                you want to?
               </p>
               <a class="btn btn-outline-light fs-6 px-4" href="./contactus.html"
                 >Contact Us</a
